--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test":"jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -19,12 +20,15 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
-    "sweetalert2": "^11.4.8"
+    "sweetalert2": "^11.4.8",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "jest": "^29.5.0",
     "vite": "^3.1.0"
   }
 }
