--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test":"jest --watchAll"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -16,19 +16,28 @@
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.9.1",
     "firebase": "^9.15.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
-    "sweetalert2": "^11.4.8",
-    "whatwg-fetch": "^3.6.2"
+    "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-jest": "^29.5.0",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.5.0",
-    "vite": "^3.1.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "vite": "^3.1.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
