--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.9.1",
+    "cloudinary": "^1.36.4",
     "firebase": "^9.15.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -37,6 +38,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "setimmediate": "^1.0.5",
     "vite": "^3.1.0",
     "whatwg-fetch": "^3.6.2"
   }
