Configuración variables de entorno Firebase

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 
-
+PROPIEDAD_PRIVADA=Soy privada
 VITE_HOLA = Mundo en Producción !!
-VITE_JWT_SEED=EJFKKLDKDSNMSKI1234
+
+VITE_APIKEY=AIzaSyCZlxqYwMrOuiSMlG-F5x6zPqKGi1Ap06A
+VITE_AUTHDOMAIN=react-curso-ebba4.firebaseapp.com
+VITE_PROJECTID=react-curso-ebba4
+VITE_STORAGEBUCKET=react-curso-ebba4.appspot.com
+VITE_MESSAGINGSENDERID=778048932455
+VITE_APPID=1:778048932455:web:cff7fb0f4610f4c5db22c2
