--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,10 @@
 
 VITE_HOLA = Mundo en Testing !!
+VITE_JWT_SEED=EJFKKLDKDSNMSKI1234
+
+VITE_APIKEY=AIzaSyDtTmeLU_0_E1hNCHkIk3EuAisvCDHn1rg
+VITE_AUTHDOMAIN=react-firebase-testing-f5483.firebaseapp.com
+VITE_PROJECTID=react-firebase-testing-f5483
+VITE_STORAGEBUCKET=react-firebase-testing-f5483.appspot.com
+VITE_MESSAGINGSENDERID=1027891679133
+VITE_APPID=1:1027891679133:web:d9d79e930a8f1076312974
